--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "numpy>=1.24.0",
     "tqdm>=4.65.0",
     "pyyaml>=6.0",
+    "datasets>=2.14.0",
+    "accelerate>=0.20.0",
 ]
 
 [project.optional-dependencies]
